# ic-stable-roaring

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  RELEASING.md  SECURITY.md  build.rs  canbench.yml  canbench_results.yml  deny.toml
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: quality.yml  release.yml
audit/: Audit.lean  README.md  REPORT.md  SCOPE.md  lake-manifest.json  lakefile.toml
audit/Audit/: Abstract.lean  Bitmap.lean  Checkpoint.lean  CheckpointAppend.lean  ErrorAtomicity.lean  IcMessage.lean  Journal.lean  JournalBytes.lean  JournalInvariant.lean  JournalRefinement.lean  Mutation.lean  PublicMutation.lean  Safety.lean  SnapshotWrite.lean  Soundness.lean
audit/aeneas/: Cargo.toml  lib.rs
audit/scripts/: check-journal-model.sh  regenerate-journal-model.sh
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: bitmap_init_bytes.rs  bitmap_operations_reopen.rs
scripts/: ci_audit.sh  install-git-hooks.sh  sweep_journal_cap_canbench.sh  test_layout_matrix.sh
src/: bitmap.rs  journal.rs  lib.rs  memory.rs
src/bench/: mod.rs  wipe.rs
tests/fixtures/: README.md  roaring-0.11.4-mixed.hex
