[package]
name = "ic-stable-roaring"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
canbench = ["dep:canbench-rs", "dep:candid", "dep:ic-cdk"]

[dependencies]
ic-stable-structures = "0.7.2"
roaring = "0.11.4"

## canbench
canbench-rs = { version = "0.5", optional = true }
candid = { version = "0.10", optional = true }
ic-cdk = { version = "0.20", optional = true }
