[package]
name = "ic-stable-roaring"
version = "0.1.0"
authors = ["Inomoto Yota <yota@perforate.org>"]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.90.0"

build = "build.rs"

description = "Persistent Rust Roaring Bitmap for the Internet Computer."
include = [
    "Cargo.toml",
    "README.md",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "build.rs",
    "src/**/*",
]

repository = "https://app.radicle.xyz/nodes/iris.radicle.xyz/rad:zDtjNsMiepkyY2QGnW4NUbjrBExY"

readme = "README.md"

categories = ["data-structures"]
keywords = ["internet-computer", "roaring", "bitmap"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
canbench = ["dep:canbench-rs", "dep:candid", "dep:ic-cdk"]

[dependencies]
ic-stable-structures = "0.7"
roaring = "0.11.4"

## canbench
canbench-rs = { version = "0.6", optional = true }
candid = { version = "0.10", optional = true }
ic-cdk = { version = "0.20", optional = true }
