[package]
name = "ic-stable-roaring"
version = "0.1.0"
authors = ["Inomoto Yota <yota@perforate.org>"]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.90.0"

build = "build.rs"

description = "Persistent Rust Roaring Bitmap for the Internet Computer."
include = [
    "Cargo.toml",
    "README.md",
    "CONTRIBUTING.md",
    "RELEASING.md",
    "CHANGELOG.md",
    "SECURITY.md",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "build.rs",
    "src/**/*",
    "tests/**/*",
]

documentation = "https://docs.rs/ic-stable-roaring/"
repository = "https://github.com/perforate-org/ic-stable-roaring"

readme = "README.md"

categories = ["data-structures"]
keywords = ["internet-computer", "roaring", "bitmap"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
canbench = ["dep:canbench-rs", "dep:candid", "dep:ic-cdk"]

[dependencies]
ic-stable-structures = "0.7"
roaring = "0.11.4"

## canbench
canbench-rs = { version = "0.6", optional = true }
candid = { version = "0.10", optional = true }
ic-cdk = { version = "0.20", optional = true }

[dev-dependencies]
proptest = "1.11"
