[package]
name = "ic-stable-roaring-fuzz"
version = "0.0.0"
publish = false
edition = "2024"
rust-version = "1.90.0"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.3", features = ["derive"] }
ic-stable-roaring = { path = ".." }
ic-stable-structures = "0.7"
libfuzzer-sys = "0.4"

# Prevent this standalone cargo-fuzz workspace from joining a parent workspace.
[workspace]
members = ["."]

[[bin]]
name = "bitmap_operations_reopen"
path = "fuzz_targets/bitmap_operations_reopen.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bitmap_init_bytes"
path = "fuzz_targets/bitmap_init_bytes.rs"
test = false
doc = false
bench = false
